# suton

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  Dockerfile  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  package.json  playwright.config.ts  pnpm-lock.yaml
.github/workflows/: release.yml
backend/: pyproject.toml
backend/app/: config.py  db.py  embedding.py  main.py  processing.py  schema.sql  worker_health.py
backend/tests/: test_api_validation.py  test_embedding.py
docker/: entrypoint.sh
docs/: dockerhub-description.md
docs/spec/: README.md
frontend/: package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/e2e/: minimal-loop.spec.ts  v010.spec.ts
scripts/: collect_evidence.py  dev_check.py  doctor.py  env_info.py  extract-changelog-release.sh  migrate.py  process_demo.py  reset_demo.py  scan_secrets.py  search_question.py  seed_confidence_levels.py  seed_document_details.py  seed_long_lists.py  seed_missing_source.py  seed_no_source_actions.py  seed_processing_failure.py  seed_processing_polling.py  seed_project_counts.py  seed_question_history_long_text.py  seed_question_history_research.py  seed_question_scope_errors.py  seed_source_file_missing.py  seed_source_reader.py  seed_stale_source.py  verify_api_contract.py  verify_db.py  verify_design_tokens.py  verify_release_gate.py  verify_visual_gate.py  wait_http.py
scripts/tests/: test_chunking.py  test_fixtures.py  test_gate_tools.py
tests/fixtures/: not-pdf.txt  question.txt  unmatched-question.txt
(+27 files in other folders)
